# policy-corpus-builder

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
configs/: README.md
docs/: README.md  adapter-authors.md  duplicate-audit.md  supported-surface.md
examples/: README.md  eu.toml  eu_nim.toml  local_file.toml  minimal.toml  non_eu_australia.toml  non_eu_canada.toml  non_eu_new_zealand.toml  non_eu_uk.toml
examples/fixtures/: policies.json  policies.jsonl
examples/notebooks/: local_file_end_to_end.ipynb  test_notebook.ipynb
examples/queries/: eu_queries.txt  example_queries.txt  non_eu_new_zealand_queries.txt  non_eu_uk_queries.txt
legacy_reference/notebooks/: 01A_retrieve_eurlex_documents.ipynb  01B_retrieve_eurlex_nim.ipynb  01C_retrieve_non_eu_documents.ipynb
src/: retrieval_queries.py
src/policy_corpus_builder/: __init__.py  cli.py  config.py  corpus_builder.py  env.py  models.py  orchestration.py  pipeline.py  postprocess.py  queries.py
src/policy_corpus_builder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_adapter_execution.py  test_adapter_mapping.py  test_cli_build_corpus.py  test_config.py  test_corpus_builder.py  test_duplicate_audit.py  test_env.py  test_eurlex_adapter.py  test_eurlex_nim_adapter.py  test_export.py  test_local_file_adapter.py  test_manifest.py  test_non_eu_aus.py  test_non_eu_canada.py  test_non_eu_nz.py  test_non_eu_output.py  test_non_eu_uk.py  test_non_eu_us.py  test_pipeline.py  test_postprocess.py  test_smoke.py
(+31 files in other folders)
