[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "policy-corpus-builder"
version = "0.1.0"
description = "Reusable tooling for policy document retrieval, normalization, and corpus export."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Anne Cathrine Linder" }
]
dependencies = [
  "beautifulsoup4",
  "certifi",
  "numpy",
  "pandas",
  "requests",
]

[project.scripts]
policy-corpus-builder = "policy_corpus_builder.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
